@@ -68,6 +68,9 @@ WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe,
 
 [B]Advanced Emulator Launcher | version 0.9.8 | XX January 2018[/B]
 
+FEATURE  Add Year and Developer for Categories.
+         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2688653#pid2688653
+
 FEATURE  Per-launcher setting to disable multi-disc ROM support.
 
 WIP      Option to rescrape all assets from launcher in a similar fashion to "Scan ROMs local artwork".
